--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<meta name="description" content="CAST Figuration - A feature rich, responsive, mobile first, accessible, front-end framework inspired by Bootstrap.">
+<meta name="description" content="CAST Figuration - A feature rich, responsive, mobile first, accessible, front-end framework.">
 
 <title>
   {% if page.layout == "home" %}
@@ -22,10 +22,8 @@
   <link href="{{ site.baseurl }}/dist/css/figuration.css" rel="stylesheet">
 {% endif %}
 
-{% if site.github %}
 <!-- Algolia DocSearch CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
-{% endif %}
 
 <!-- Docs CSS -->
 {% if site.github %}
