--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -1,7 +1,7 @@
 .skipnav {
   position: absolute;
   top: -100px;
-  z-index: 1001;
+  z-index: 1200;
   display: block;
   width: 12em;
   max-width: 100%;
@@ -20,7 +20,70 @@
   color: #000;
 }
 
-.icon-menu {
+.cf-header {
+  color: #fff;
+  background-color: #246;
+}
+
+.cf-header .navbar-brand {
+  margin-right: .5rem;
+}
+
+.cf-header .navbar-brand-logo {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+}
+
+@media (max-width: 61.9375em) {
+  .cf-header .navbar-collapse .navbar-nav {
+    padding-top: .5rem;
+  }
+  .cf-header .navbar-collapse .nav-link {
+    padding-left: .5rem;
+  }
+}
+
+@media (min-width: 48em) {
+  @supports ((position: -webkit-sticky) or (position: sticky)) {
+    .cf-header {
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      z-index: 1020;
+    }
+    .cf-content > h1[id]::before,
+    .cf-content > h2[id]::before,
+    .cf-content > h3[id]::before,
+    .cf-content > h4[id]::before,
+    .cf-content > h5[id]::before {
+      position: relative;
+      z-index: -1;
+      display: block;
+      height: 4.5rem;
+      margin-top: -4.5rem;
+      visibility: hidden;
+      content: "";
+    }
+  }
+}
+
+.cf-header-social {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.cf-header-social .nav-link {
+  padding-right: .5rem;
+  padding-left: .5rem;
+}
+
+.cf-header-menu {
   display: inline-block;
   margin-top: -.25rem;
   font-size: 1.5rem;
@@ -28,18 +91,11 @@
   line-height: .75;
 }
 
-.cf-header {
-  color: #fff;
-  background-color: #292929;
-}
-
-@media (max-width: 61.9375em) {
-  .cf-header .nav-item {
-    float: none;
-  }
-  .cf-header .nav-item + .nav-item {
-    margin-left: 0;
-  }
+.cf-header-icon {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  vertical-align: middle;
 }
 
 .home-icons .fa {
@@ -49,6 +105,16 @@
 
 .home-icons .fa + .fa {
   margin-left: .5rem;
+}
+
+.home-feature > .small {
+  margin-top: -.75rem;
+}
+
+@media (min-width: 48em) {
+  .home-feature {
+    margin-top: 2.2rem;
+  }
 }
 
 .btn-start {
@@ -68,9 +134,18 @@
 }
 
 .jumbotron-home {
+  padding: 2rem 1.5rem;
+  margin-bottom: 2rem;
   color: rgba(255, 255, 255, 0.9);
-  text-align: center;
-  background-color: #246;
+  background-image: -webkit-linear-gradient(315deg, #0c5782 0%, #117cba 100%);
+  background-image: linear-gradient(135deg, #0c5782 0%, #117cba 100%);
+}
+
+.jumbotron-home .logo-home {
+  display: block;
+  margin: 0 auto;
+  -webkit-filter: drop-shadow(0 0 7px rgba(255, 255, 255, 0.15));
+          filter: drop-shadow(0 0 7px rgba(255, 255, 255, 0.15));
 }
 
 .jumbotron-home h1, .jumbotron-home h2 {
@@ -78,34 +153,49 @@
   color: #fff;
 }
 
-.jumbotron-home .aka {
-  margin-top: -.5rem;
-  font-size: 1.15rem;
-  font-weight: 600;
-}
-
 .jumbotron-home .lead {
-  margin-top: 1.5rem;
-  margin-bottom: 2.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
   font-size: 1.5rem;
 }
 
-.jumbotron-home .start {
-  padding-bottom: 2rem;
-  margin-bottom: 2rem;
+.jumbotron-home .splash-home {
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
+@media (max-width: 61.9375em) {
+  .jumbotron-home .container {
+    width: 100%;
+  }
+}
+
+.container-divider {
+  border-top: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+@media (min-width: 48em) {
+  .container-divider.col, .container-divider[class*="col-"] {
+    border-top: 0;
+    border-left: 1px solid rgba(0, 0, 0, 0.5);
+  }
+}
+
 .jumbotron-docs {
-  padding: 0.75rem 0.375rem;
+  padding: .5rem .375rem;
+  margin-bottom: 0;
   color: rgba(255, 255, 255, 0.9);
-  background-color: #246;
+  background-image: -webkit-linear-gradient(315deg, #0c5782 0%, #117cba 100%);
+  background-image: linear-gradient(135deg, #0c5782 0%, #117cba 100%);
 }
 
 @media (min-width: 36em) {
   .jumbotron-docs {
-    padding: 1.5rem 0.75rem;
+    padding: 1rem .5rem;
   }
+}
+
+.jumbotron-docs .lead {
+  margin-bottom: .25rem;
 }
 
 .anchorjs-link {
@@ -120,7 +210,7 @@
 
 .cf-clipboard {
   position: relative;
-  display: none;
+  display: block;
   float: right;
   line-height: 1;
 }
@@ -131,12 +221,6 @@
 
 .cf-clipboard .tooltip {
   white-space: nowrap;
-}
-
-@media (min-width: 48em) {
-  .cf-clipboard {
-    display: block;
-  }
 }
 
 .btn-clipboard {
@@ -152,11 +236,22 @@
 }
 
 .cf-sidebar {
-  margin-bottom: 3rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #f7f7f7;
+  border-bottom: 1px solid #c2c2c2;
 }
 
-.cf-sidebar .nav {
-  margin-top: -.25rem;
+@media (min-width: 48em) {
+  .cf-sidebar {
+    padding-bottom: 3rem;
+    border-right: 1px solid #c2c2c2;
+    border-bottom: 0;
+  }
+}
+
+.cf-sidebar .cf-sidebar-header {
+  margin-bottom: .75rem;
 }
 
 .cf-sidebar .nav-link {
@@ -166,7 +261,7 @@
 
 .cf-sidebar .nav-link.active {
   color: #fff;
-  background-color: #246;
+  background-color: #0c5782;
 }
 
 @media (max-width: 61.9375em) {
@@ -175,10 +270,79 @@
   }
 }
 
-@media (max-width: 61.9375em) {
-  .cf-sidebar {
-    margin-bottom: 2em;
+#markdown-toc {
+  font-size: .9375rem;
+}
+
+@media (min-width: 75em) {
+  #contents,
+  #markdown-toc {
+    display: none;
   }
+}
+
+.cf-toc {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-size: .875rem;
+}
+
+.cf-toc .section-toc {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  padding-left: 1rem;
+  margin-bottom: 0;
+  list-style: none;
+  border-left: 1px solid #8ac;
+}
+
+@supports ((position: -webkit-sticky) or (position: sticky)) {
+  .cf-toc .section-toc {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 4.375rem;
+    max-height: calc(100vh - 4.375rem);
+    overflow-y: auto;
+    overflow-x: visible;
+  }
+}
+
+.cf-toc .section-toc ul {
+  padding-left: .875rem;
+  list-style: none;
+}
+
+.cf-toc .section-toc li {
+  position: relative;
+  padding: .0625rem 0;
+}
+
+.cf-toc .section-toc .active::before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -1rem;
+  display: block;
+  width: .1875rem;
+  font-size: 5rem;
+  line-height: .5rem;
+  content: " ";
+  background-color: #246;
+}
+
+.cf-toc .section-toc .section-toc-h3 {
+  padding-left: .875rem;
+}
+
+.cf-toc .section-toc .section-toc-h4 {
+  padding-left: 1.75rem;
+}
+
+.cf-toc .section-toc .section-toc-h5 {
+  padding-left: 2.625rem;
 }
 
 .cf-title {
@@ -188,6 +352,19 @@
 .cf-title + p {
   font-size: 1.15rem;
   font-weight: 600;
+}
+
+.cf-content {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+
+@media (min-width: 48em) {
+  .cf-content {
+    padding-top: 1.5rem;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+  }
 }
 
 .cf-content > h2 {
@@ -423,13 +600,21 @@ h4 > code {
 .cf-feed {
   padding: 2rem 0;
   margin-top: 2rem;
-  margin-bottom: -2rem;
-  background-color: #47a;
+  text-align: center;
+  background-image: -webkit-linear-gradient(315deg, #117cba 0%, #0c5782 100%);
+  background-image: linear-gradient(135deg, #117cba 0%, #0c5782 100%);
+}
+
+.cf-feed a {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.cf-feed a:focus, .cf-feed a:hover {
+  color: white;
 }
 
 .cf-footer {
   padding: .75rem 0;
-  margin-top: 2rem;
   font-size: 85%;
   text-align: center;
   background-color: #f0f0f0;
@@ -519,14 +704,21 @@ h4 > code {
 }
 
 .docsearch {
-  width: 11rem;
+  width: 100% !important;
   padding-left: 1.5rem;
 }
 
 .docsearch-wrapper {
   position: relative;
   width: 11rem;
+  margin-left: .5rem;
   clear: both;
+}
+
+@media (min-width: 62rem) and (max-width: 66em) {
+  .docsearch-wrapper {
+    width: 7.5rem;
+  }
 }
 
 .docsearch-wrapper::before {
@@ -1067,6 +1259,17 @@ h4 > code {
 .cf-example-flex > div div {
   background-color: rgba(34, 68, 102, 0.05);
   border: 1px solid rgba(34, 68, 102, 0.2);
+}
+
+.cf-example > .heading {
+  width: 3rem;
+  height: 3rem;
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  background-image: url("../brand/figuration-solid.svg");
+  border: 0;
 }
 
 .hll {
