--- a/docs/assets/scss/_search.scss
+++ b/docs/assets/scss/_search.scss
@@ -3,13 +3,18 @@
 // Some wacky hacky stuff to rework the search result look a bit
 
 .docsearch {
-    width: 11rem;
+    width: 100% !important;
     padding-left: 1.5rem;
 }
 .docsearch-wrapper {
     position: relative;
     width: 11rem;
+    margin-left: .5rem;
     clear: both;
+
+    @media (min-width: 62rem) and (max-width: 66em) {
+        width: 7.5rem;
+    }
 
     &::before {
         position: absolute;
