--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -1,4 +1,4 @@
-// scss-lint:disable IdSelector, ImportantRule
+// scss-lint:disable IdSelector, ImportantRule, QualifyingElement
 
 // Core reusable parts
 @import "../../../scss/functions";
@@ -11,7 +11,7 @@ $docs-color: #246;
 .skipnav {
     position: absolute;
     top: -100px;
-    z-index: 1001;
+    z-index: 1200;
     display: block;
     width: 12em;
     max-width: 100%;
@@ -30,7 +30,73 @@ $docs-color: #246;
     }
 }
 
-.icon-menu {
+.cf-header {
+    color: $white;
+    // background-color: $uibase-900;
+    background-color: #246;
+
+    .navbar-brand {
+        margin-right: .5rem;
+    }
+
+    .navbar-brand-logo {
+        display: inline-block;
+        width: 2rem;
+        height: 2rem;
+    }
+
+    @include media-breakpoint-down(md) {
+        .navbar-collapse {
+            .navbar-nav {
+                padding-top: .5rem;
+            }
+            .nav-link {
+                padding-left: .5rem;
+            }
+        }
+    }
+}
+
+// Do a sticky navigation thing
+@include media-breakpoint-up(md) {
+    @supports (position: sticky) {
+        .cf-header {
+            position: sticky;
+            top: 0;
+            z-index: $zindex-fixed;
+        }
+
+        .cf-content {
+            > h1[id],
+            > h2[id],
+            > h3[id],
+            > h4[id],
+            > h5[id] {
+                &::before {
+                    position: relative;
+                    z-index: -1;
+                    display: block;
+                    height: 4.5rem;
+                    margin-top: -4.5rem;
+                    visibility: hidden;
+                    content: "";
+                }
+            }
+        }
+    }
+}
+
+.cf-header-social {
+    flex-direction: row;
+    align-items: center;
+
+    .nav-link {
+        padding-right: .5rem;
+        padding-left: .5rem;
+    }
+}
+
+.cf-header-menu {
     display: inline-block;
     margin-top: -.25rem;
     font-size: 1.5rem;
@@ -38,19 +104,13 @@ $docs-color: #246;
     line-height: .75;
 }
 
-.cf-header {
-    color: $white;
-    background-color: $uibase-900;
+.cf-header-icon {
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    vertical-align: middle;
 }
 
-@include media-breakpoint-down(md) {
-    .cf-header .nav-item {
-        float: none;
-    }
-    .cf-header .nav-item + .nav-item {
-        margin-left: 0;
-    }
-}
 
 // Home page
 .home-icons .fa {
@@ -59,6 +119,14 @@ $docs-color: #246;
 }
 .home-icons .fa + .fa {
     margin-left: .5rem;
+}
+.home-feature {
+    > .small {
+        margin-top: -.75rem;
+    }
+    @include media-breakpoint-up(md) {
+        margin-top: 2.2rem;
+    }
 }
 .btn-start {
     padding: .75rem 2rem;
@@ -78,41 +146,66 @@ $docs-color: #246;
 
 // Jumbotrons
 .jumbotron-home {
+    padding: 2rem 1.5rem;
+    margin-bottom: 2rem;
     color: rgba(255,255,255,.9);
-    text-align: center;
-    background-color: $docs-color;
+    // text-align: center;
+    // background-color: $docs-color;
+    background-image: linear-gradient(135deg, #0c5782 0%, #117cba 100%);
+
+    .logo-home {
+        display: block;
+        margin: 0 auto;
+        filter: drop-shadow(0 0 7px rgba(255,255,255,.15));
+    }
 
     h1, h2 {
         font-weight: bold;
         color: $white;
     }
 
-    .aka {
-        margin-top: -.5rem;
-        font-size: 1.15rem;
-        font-weight: 600;
-    }
-
     .lead {
-        margin-top: 1.5rem;
-        margin-bottom: 2.5rem;
+        margin-top: 1rem;
+        margin-bottom: 1.5rem;
         font-size: 1.5rem;
     }
 
-    .start {
-        padding-bottom: 2rem;
-        margin-bottom: 2rem;
+    .splash-home {
         border-bottom: 1px solid rgba(255,255,255,.5);
+    }
+
+    @include media-breakpoint-down(md) {
+        .container {
+            width: 100%;
+        }
+    }
+}
+
+.container-divider {
+    border-top: 1px solid rgba(0,0,0,.5);
+
+    @include media-breakpoint-up(md) {
+        &.col,
+        &[class*="col-"] {
+            border-top: 0;
+            border-left: 1px solid rgba(0,0,0,.5);
+        }
     }
 }
 
 .jumbotron-docs {
-    padding: ($jumbotron-padding-xs-y / 2) ($jumbotron-padding-xs-x / 2);
+    padding: .5rem .375rem;
+    margin-bottom: 0;
     color: rgba(255,255,255,.9);
-    background-color: $docs-color;
+    // background-color: $docs-color;
+    background-image: linear-gradient(135deg, #0c5782 0%, #117cba 100%);
 
     @include media-breakpoint-up(sm) {
-        padding: ($jumbotron-padding-y / 2) ($jumbotron-padding-x / 2);
+        padding: 1rem .5rem;
+    }
+
+    .lead {
+        margin-bottom: .25rem;
     }
 }
 
@@ -129,7 +222,7 @@ $docs-color: #246;
 // ClipboardJS
 .cf-clipboard {
     position: relative;
-    display: none;
+    display: block;
     float: right;
     line-height: 1;
 
@@ -139,10 +232,6 @@ $docs-color: #246;
 
     .tooltip {
         white-space: nowrap;
-    }
-
-    @include media-breakpoint-up(md) {
-        display: block;
     }
 }
 .btn-clipboard {
@@ -162,10 +251,23 @@ $docs-color: #246;
 
 // Sidenav
 .cf-sidebar {
-    margin-bottom: 3rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    background-color: $uibase-25;
+    border-bottom: 1px solid $uibase-200;
+
+    @include media-breakpoint-up(md) {
+        padding-bottom: 3rem;
+        border-right: 1px solid $uibase-200;
+        border-bottom: 0;
+    }
+
+    .cf-sidebar-header {
+        margin-bottom: .75rem;
+    }
 
     .nav {
-        margin-top: -.25rem;
+        // margin-top: -.25rem;
     }
 
     .nav-link {
@@ -174,16 +276,81 @@ $docs-color: #246;
 
         &.active {
             color: $white;
-            background-color: $docs-color;
+            background-color: #0c5782;
         }
 
         @include media-breakpoint-down(md) {
             display: inline-block;
         }
     }
+}
 
-    @include media-breakpoint-down(md) {
-        margin-bottom: 2em;
+// TOC
+#markdown-toc {
+    font-size: .9375rem;
+}
+
+@include media-breakpoint-up(xl) {
+    #contents,
+    #markdown-toc {
+        display: none;
+    }
+}
+
+.cf-toc {
+    order: 2;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    font-size: .875rem;
+
+    .section-toc {
+        @supports (position: sticky) {
+            position: sticky;
+            top: 4.375rem;
+            max-height: calc(100vh - 4.375rem);
+            overflow-y: auto;
+            overflow-x: visible;
+        }
+
+        padding-top: .5rem;
+        padding-bottom: .5rem;
+        padding-left: 1rem;
+        margin-bottom: 0;
+        list-style: none;
+        border-left: 1px solid #8ac;
+
+        ul {
+            padding-left: .875rem;
+            list-style: none;
+        }
+
+        li {
+            position: relative;
+            padding: .0625rem 0;
+        }
+
+        .active::before {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: -1rem;
+            display: block;
+            width: .1875rem;
+            font-size: 5rem;
+            line-height: .5rem;
+            content: " ";
+            background-color: #246;
+        }
+
+        .section-toc-h3 {
+            padding-left: .875rem;
+        }
+        .section-toc-h4 {
+            padding-left: 1.75rem;
+        }
+        .section-toc-h5 {
+            padding-left: 2.625rem;
+        }
     }
 }
 
@@ -199,6 +366,15 @@ $docs-color: #246;
 
 // Content
 .cf-content {
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+
+    @include media-breakpoint-up(md) {
+        padding-top: 1.5rem;
+        padding-right: 2.5rem;
+        padding-left: 2.5rem;
+    }
+
     > h2 {
         margin-top: 2.5rem;
     }
@@ -401,14 +577,21 @@ h4 {
 .cf-feed {
     padding: 2rem 0;
     margin-top: 2rem;
-    margin-bottom: -2rem;
-    background-color: #47a;
+    text-align: center;
+    background-image: linear-gradient(135deg, #117cba 0%, #0c5782 100%);
+
+    a {
+        color: rgba(255, 255, 255, .9);
+
+        @include hover-focus() {
+            color: rgba(255, 255, 255, 1);
+        }
+    }
 }
 
 // Footer
 .cf-footer {
     padding: .75rem 0;
-    margin-top: 2rem;
     font-size: 85%;
     text-align: center;
     background-color: $uibase-50;
