--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -11,8 +11,10 @@
 // Custom overrides
 @import "custom";
 
-// Variables and mixins
+// Settings variables
 @import "settings";
+
+// Mixins
 @import "mixins";
 
 // Base reset
@@ -26,10 +28,10 @@
 @import "core/images";
 @import "core/tables";
 @import "core/forms";
-@import "core/custom-forms"; // TODO: look into svg coloring
+@import "core/custom-forms";
 @import "core/buttons";
 
-// Components - extend with new or extended functionality and layout
+// Components - additional functionality and layout
 @import "component/grid";
 @import "component/animation";
 @import "component/caret";
