Add support query for sticky and update doc

--- a/scss/utilities/_position.scss
+++ b/scss/utilities/_position.scss
@@ -15,8 +15,10 @@
     z-index: $zindex-fixed;
 }
 
-.sticky-top {
-    position: sticky;
-    top: 0;
-    z-index: $zindex-sticky;
+@supports (position: sticky) {
+    .sticky-top {
+        position: sticky;
+        top: 0;
+        z-index: $zindex-sticky;
+    }
 }
