Fix shorthand flex-basis for those non postcss-flexbugs-fixes users

--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -159,7 +159,7 @@
         margin-bottom: $card-spacer-y; // 1
 
         .card {
-            flex: 1 0 0;
+            flex: 1 0 0%;
             margin-bottom: 0; // 1
         }
     }
@@ -193,7 +193,7 @@
         margin-bottom: $card-spacer-y; // 1
 
         .card {
-            flex: 1 0 0;
+            flex: 1 0 0%;
             margin-bottom: 0; // 1
 
             + .card {
