--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -14,11 +14,8 @@
 // Mixins
 @import "mixins";
 
-// Base reset
-@import "base/normalize";
-@import "base/print";
-
 // Core CSS items - extend on the base HTML
+@import "core/print";
 @import "core/reboot";
 @import "core/typography";
 @import "core/code";
