--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -1,87 +1,76 @@
-// scss-lint:disable ImportantRule, QualifyingElement, DuplicateProperty
+// scss-lint:disable ImportantRule, QualifyingElement, DuplicateProperty, VendorPrefix
 
 // Reboot
 //
-// Global resets to common HTML elements and more for easier usage.
-// Adds additional rules on top of Normalize.css, including several overrides.
+// Normalization of HTML elements, manually forked from Normalize.css and
+// Bootstrap's Reboot to remove styles targeting irrelevant browsers while
+// applying new styles.
+
+// Normalize is licensed MIT. https://github.com/necolas/normalize.css
+// Bootstrap is licensed MIT. https://github.com/twbs/bootstrap
 
 
-// Reset the box-sizing
+// Document
 //
-// Change from `box-sizing: content-box` to `border-box` so that when you add
-// `padding` or `border`s to an element, the overall declared `width` does not
-// change. For example, `width: 100px;` will always be `100px` despite the
-// `border: 10px solid red;` and `padding: 20px;`.
-//
-// This reset may cause conflicts with some third-party widgets. For
-// recommendations on resolving such conflicts, see
-// http://figuration.org/get-started/quick-start/#box-sizing
-//
-// Credit: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
-
+// 1. Change from `box-sizing: content-box` so that `width` is not affected by `padding` or `border`.
+// 2. Change the default font family in all browsers.
+// 3. Correct the line height in all browsers.
+// 4. Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.
+// 5. Setting @viewport causes scrollbars to overlap content in IE11 and Edge, so
+//    we force a non-overlapping, non-auto-hiding scrollbar to counteract.
+// 6. Change the default tap highlight to be completely transparent in iOS.
 html {
-    box-sizing: border-box;
+    box-sizing: border-box; // 1
+    font-family: sans-serif; // 2
+    line-height: 1.15; // 3
+    -webkit-text-size-adjust: 100%; // 4
+    -ms-text-size-adjust: 100%; // 4
+    -ms-overflow-style: scrollbar; // 5
+    -webkit-tap-highlight-color: rgba(0,0,0,0); // 6
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+    box-sizing: inherit; // 1
 }
 
-
-// Make viewport responsive
-//
-// @viewport is needed because IE 10+ doesn't honor <meta name="viewport"> in
-// some cases. See http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/.
-// Eventually @viewport will replace <meta name="viewport">.
-//
-// However, `device-width` is broken on IE 10 on Windows (Phone) 8,
-// and the fix for that involves a snippet of JavaScript to sniff the user agent
-// and apply some conditional CSS.
-//
-// See:
-// * http://timkadlec.com/2013/01/windows-phone-8-and-device-width/
-// * http://figuration.org/get-started/browsers-devices/#internet-explorer-10-in-windows-phone-8
+// IE10+ doesn't honor `<meta name="viewport">` in some cases.
 @at-root {
     @-ms-viewport { width: device-width; }
 }
 
-
-//
-// Reset HTML, body, and more
-//
-
-html {
-    // Sets a specific default `font-size` for user with `rem` type scales.
-    font-size: $font-size-root;
-    // As a side-effect of setting the @viewport above,
-    // IE11 & Edge make the scrollbar overlap the content and automatically hide itself when not in use.
-    // Unfortunately, the auto-showing of the scrollbar is sometimes too sensitive,
-    // thus making it hard to click on stuff near the right edge of the page.
-    // So we add this style to force IE11 & Edge to use a "normal", non-overlapping, non-auto-hiding scrollbar.
-    -ms-overflow-style: scrollbar;
-    // Changes the default tap highlight to be completely transparent in iOS.
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+// Shim for "new" HTML5 structural elements to display correctly (IE10, older browsers)
+article,
+aside,
+dialog,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section {
+    display: block;
 }
 
+
+// Body
+//
+// 1. Remove the margin in all browsers.
+// 2. As a best practice, apply a default `background-color`.
+// 3. Set an explicit initial text-align value so that we can later use the
+//    the `inherit` value on things like `<th>` elements.
 body {
-    // Remove the margin in all browsers
-    margin: 0;
-    // Make the `body` use the `font-size-root`
+    margin: 0; // 1
     font-family: $font-family-base;
     font-size: $font-size-base;
     font-weight: $font-weight-base;
     line-height: $line-height-base;
-    // Go easy on the eyes and use something other than `#000` for text
     color: $body-color;
-    // By default, `<body>` has no `background-color` so we set one as a best practice.
-    background-color: $body-bg;
-}
-
-// Add the correct display in IE 10-
-dialog {
-    display: block;
+    text-align: left; // 3
+    background-color: $body-bg; // 2
 }
 
 // Suppress the focus outline on elements that cannot be accessed via keyboard.
@@ -91,6 +80,17 @@ dialog {
 // Credit: https://github.com/suitcss/base
 [tabindex="-1"]:focus {
     outline: none !important;
+}
+
+
+// Content grouping
+//
+// 1. Add the correct box sizing in Firefox.
+// 2. Show the overflow in Edge and IE.
+hr {
+    box-sizing: content-box; // 1
+    height: 0; // 1
+    overflow: visible; // 2
 }
 
 
@@ -116,14 +116,20 @@ p {
     margin-bottom: 1rem;
 }
 
+
 // Abbreviations
+//
+// 1. Remove the bottom border in Firefox 39-.
+// 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+// 3. Add explicit cursor to indicate changed behavior.
+// 4. Duplicate behavior to the data-* attribute for our tooltip and popover widgets.
 abbr[title],
-// Add data-* attribute to help out our tooltip widget
-abbr[data-cfw-tooltip-original-title],
-abbr[data-cfw-popover-original-title] {
-    text-decoration: none;
-    cursor: help;
-    border-bottom: 1px dotted $abbr-border-color;
+abbr[data-cfw-tooltip-original-title],  //4
+abbr[data-cfw-popover-original-title] { //4
+    text-decoration: underline; // 2
+    text-decoration: underline dotted; // 2
+    cursor: help; // 3
+    border-bottom: 0; // 1
 }
 
 address {
@@ -159,6 +165,38 @@ blockquote {
     margin: 0 0 1rem;
 }
 
+dfn {
+    font-style: italic; // Add the correct font style in Android 4.3-
+}
+
+b,
+strong {
+    font-weight: bolder; // Add the correct font weight in Chrome, Edge, and Safari
+}
+
+small {
+    font-size: 80%; // Add the correct font size in all browsers
+}
+
+//
+// Prevent `sub` and `sup` elements from affecting the line height in
+// all browsers.
+//
+sub,
+sup {
+    position: relative;
+    font-size: 75%;
+    line-height: 0;
+    vertical-align: baseline;
+}
+
+sub {
+    bottom: -.25em;
+}
+sup {
+    top: -.5em;
+}
+
 
 //
 // Links
@@ -167,6 +205,8 @@ blockquote {
 a {
     color: $link-color;
     text-decoration: $link-decoration;
+    background-color: transparent; // Remove the gray background on active links in IE 10.
+    -webkit-text-decoration-skip: objects; // Remove gaps in links underline in iOS 8+ and Safari 8+.
 
     @include hover {
         color: $link-hover-color;
@@ -175,10 +215,9 @@ a {
 }
 
 // And undo these styles for placeholder links/named anchors (without href)
-// which have not been made explicitily keyboard-focusable (without tabindex).
+// which have not been made explicitly keyboard-focusable (without tabindex).
 // It would be more straightforward to just use a[href] in previous block, but that
 // causes specificity issues in many other styles that are too complex to fix.
-
 a:not([href]):not([tabindex]) {
     color: inherit;
     text-decoration: none;
@@ -197,34 +236,39 @@ a:not([href]):not([tabindex]) {
 //
 // Code
 //
+pre,
+code,
+kbd,
+samp {
+    font-family: monospace, monospace; // Correct the inheritance and scaling of font size in all browsers.
+    font-size: 1em; // Correct the odd `em` font sizing in all browsers.
+}
 
 pre {
-    // Remove browser default top margin
-    margin-top: 0;
-    // Reset browser default of `1em` to use `rem`s
-    margin-bottom: 1rem;
-    // Normalize v4 removed this property, causing `<pre>` content to break out of wrapping code snippets
-    overflow: auto;
+    margin-top: 0; // Remove browser default top margin
+    margin-bottom: 1rem; // Reset browser default of `1em` to use `rem`s
+    overflow: auto; // Don't allow content to break outside
 }
 
 
 //
 // Figures
 //
-
 figure {
-    // Normalize adds `margin` to `figure`s as browsers apply it inconsistently.
-    // We reset that to create a better flow in-page.
-    margin: 0 0 1rem;
+    margin: 0 0 1rem; // Apply a consistent margin strategy (matches our type styles).
 }
 
 
 //
 // Images
 //
-
 img {
     vertical-align: middle;
+    border-style: none; // Remove the border on images inside links in IE 10-.
+}
+
+svg:not(:root) {
+    overflow: hidden; // Hide the overflow in IE
 }
 
 
@@ -237,7 +281,6 @@ img {
 // * http://figuration.org/content/reboot/#click-delay-optimization-for-touch
 // * http://caniuse.com/#feat=css-touch-action
 // * http://patrickhlauke.github.io/touch/tests/results/#suppressing-300ms-delay
-
 a,
 area,
 button,
@@ -254,12 +297,8 @@ textarea {
 //
 // Tables
 //
-
 table {
-    border-collapse: collapse;
-    // Reset for nesting within parents with `background-color`.
-    background-color: $table-bg;
-
+    border-collapse: collapse; // Prevent double borders
 }
 
 caption {
@@ -271,19 +310,18 @@ caption {
 }
 
 th {
-    // Centered by default, but left-align-ed to match the `td`s below.
-    text-align: left;
+    // Matches default `<td>` alignment by inheriting from the `<body>`, or the
+    // closest parent with a set `text-align`.
+    text-align: inherit;
 }
 
 
 //
 // Forms
 //
-
 label {
-    // Allow labels to use `margin` for spacing.
     display: inline-block;
-    margin-bottom: .5rem;
+    margin-bottom: .5rem; // Allow labels to use `margin` for spacing.
 }
 
 // Work around a Firefox/IE bug where the transparent `button` background
@@ -297,29 +335,49 @@ button:focus {
 
 input,
 button,
-optgroup,
 select,
+optgroup,
 textarea {
+    margin: 0; // Remove the margin in Firefox and Safari
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
-    // iOS adds rounded borders by default
-    border-radius: 0;
 }
-// scss-lint:disable VendorPrefix
-[type="checkbox"] {
-    -webkit-border-radius: 5px;
-    -webkit-appearance: checkbox;
 
+button,
+input {
+    overflow: visible; // Show the overflow in Edge
 }
-[type="radio"] {
-    -webkit-border-radius: 8px;
-    -webkit-appearance: radio;
+
+button,
+select {
+    text-transform: none; // Remove the inheritance of text transform in Firefox
 }
-// scss-lint:enable VendorPrefix
+
+// 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+//    controls in Android 4.
+// 2. Correct the inability to style clickable types in iOS and Safari.
+button,
+html [type="button"], // 1
+[type="reset"],
+[type="submit"] {
+    -webkit-appearance: button; // 2
+}
+
+// Remove inner border and padding from Firefox, but don't restore the outline like Normalize.
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+    padding: 0;
+    border-style: none;
+}
 
 input[type="radio"],
 input[type="checkbox"] {
+    box-sizing: border-box; // 1. Add the correct box sizing in IE 10-
+    padding: 0; // 2. Remove the padding in IE 10-
+
     // Apply a disabled cursor for radios and checkboxes.
     // Note: Neither radios nor checkboxes can be readonly.
     &:disabled {
@@ -335,18 +393,21 @@ input[type="month"] {
     // bug where setting a custom line-height prevents text from being vertically
     // centered within the input.
     // See https://bugs.webkit.org/show_bug.cgi?id=139848
+    // and https://github.com/twbs/bootstrap/issues/11266
     -webkit-appearance: listbox;
-}
+    }
 
 textarea {
+    overflow: auto; // Remove the default vertical scrollbar in IE.
     // Textareas should really only resize vertically so they don't break their (horizontal) containers.
     resize: vertical;
 }
 
 fieldset {
-    // Chrome and Firefox set a `min-width: min-content;` on fieldsets,
-    // so we reset that to ensure it behaves more like a standard block element.
-    //See https://html.spec.whatwg.org/multipage/#the-fieldset-and-legend-elements
+    // Browsers set a default `min-width: min-content;` on fieldsets,
+    // unlike e.g. `<div>`s, which have `min-width: 0;` by default.
+    // So we reset that to ensure fieldsets behave more like a standard block element.
+    // See https://html.spec.whatwg.org/multipage/#the-fieldset-and-legend-elements
     min-width: 0;
     // Reset the default outline behavior of fieldsets so they don't affect page layout.
     padding: 0;
@@ -354,39 +415,66 @@ fieldset {
     border: 0;
 }
 
+// 1. Correct the text wrapping in Edge and IE.
+// 2. Correct the color inheritance from `fieldset` elements in IE.
 legend {
-    // Reset the entire legend element to match the `fieldset`
     display: block;
     width: 100%;
+    max-width: 100%; // 1
     padding: 0;
     margin-bottom: .5rem;
     font-size: 1.5rem;
-    line-height: 1;
-    //  border: 0;
+    line-height: inherit;
+    color: inherit; // 2
+    white-space: normal; // 1
 }
 
-legend label {
-    // Make labels consistent even when they are inside a `legend`
-    position: relative;
-    top: -.25rem;
-    margin-bottom: -.25rem;
-    font-size: 1rem;
-    line-height: $line-height-base;
+progress {
+    vertical-align: baseline; // Add the correct vertical alignment in Chrome, Firefox, and Opera.
 }
 
-input[type="search"] {
+// Correct the cursor style of increment and decrement buttons in Chrome.
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+    height: auto;
+}
+
+[type="search"] {
     // This overrides the extra rounded corners on search inputs in iOS so that our
     // `.form-control` class can properly style them. Note that this cannot simply
-    // be added to `.form-control` as it's not specific enough.
+    // be added to `.form-control` as it's not specific enough. For details, see
+    outline-offset: -2px; // 2. Correct the outline style in Safari.
     -webkit-appearance: none;
 }
 
-// todo: needed?
+// Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none;
+}
+
+//
+// 1. Correct the inability to style clickable types in iOS and Safari.
+// 2. Change font properties to `inherit` in Safari.
+//
+::-webkit-file-upload-button {
+    font: inherit; // 2
+    -webkit-appearance: button; // 1
+}
+
+//
+// Correct element displays
+//
 output {
     display: inline-block;
-    // font-size: $font-size-base;
-    // line-height: $line-height-base;
-    // color: $input-color;
+}
+
+summary {
+    display: list-item; // Add the correct display in all browsers
+}
+
+template {
+    display: none; // Add the correct display in IE
 }
 
 // Always hide an element with the `hidden` HTML attribute (from PureCSS).
