Search cleanup and disable until release

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -23,7 +23,9 @@
 {% endif %}
 
 <!-- Algolia DocSearch CSS -->
+{% if site.github %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+{% endif %}
 
 <!-- Docs CSS -->
 {% if site.github %}
