--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -12,6 +12,8 @@
 
     {% include footer.html %}
 
+    {% if site.github %}
     {% include algolia-config.html %}
+    {% endif %}
 </body>
 </html>
