--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -42,6 +42,8 @@
 
     {% include footer.html %}
 
+    {% if site.github %}
     {% include algolia-config.html %}
+    {% endif %}
 </body>
 </html>
