--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -81,10 +81,9 @@ mark,
 // Blockquotes
 
 .blockquote {
-    padding: ($spacer / 2) $spacer;
     margin-bottom: $spacer;
     font-size: $blockquote-font-size;
-    border-left: $blockquote-border-width solid $blockquote-border-color;
+    color: $blockquote-color;
 }
 .blockquote-footer {
     display: block;
@@ -94,13 +93,4 @@ mark,
     &::before {
         content: "\2014 \00A0"; // em dash, nbsp
     }
-}
-
-// Opposite alignment of blockquote
-.blockquote-reverse {
-    padding-right: $spacer;
-    padding-left: 0;
-    text-align: right;
-    border-right: $blockquote-border-width solid $blockquote-border-color;
-    border-left: 0;
 }
