--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -1,3 +1,5 @@
+// scss-lint:disable ImportantRule
+
 // Perfect circle
 .radius-circle {
     border-radius: 50%;
@@ -23,10 +25,31 @@
 
 
 // Border removal
-// scss-lint:disable ImportantRule
 .border-0 { border: 0 !important; }
 .border-t-0 { border-top: 0 !important; }
 .border-r-0 { border-right: 0 !important; }
 .border-b-0 { border-bottom: 0 !important; }
 .border-l-0 { border-left: 0 !important; }
-// scss-lint:enable ImportantRule
+
+
+// Border colors
+// Contextual borders
+@each $theme, $color in $context-colors {
+    .border-#{$theme} {
+        border-color: $color !important;
+    }
+}
+
+// Palette colors
+@if $enable-palette {
+    @each $theme, $color in $palette-themes {
+        @each $level in $palette-levels {
+            .border-#{$theme}-#{$level} {
+                border-color: palette($color, $level) !important;
+            }
+        }
+    }
+}
+
+// Transparent border
+.border-transparent { border-color: transparent !important; }
