--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -234,7 +234,7 @@ $cursor-disabled:                not-allowed !default;
 // Font, line-height, and color for body text, headings, and more.
 $font-family-sans-serif:    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $font-family-serif:         Georgia, "Times New Roman", Times, serif !default;
-$font-family-monospace:     Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$font-family-monospace:     "SFMono-Regular", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:          $font-family-sans-serif !default;
 
 $font-size-base:    1rem !default;
