Dropown: add non-interactive text item

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -707,6 +707,8 @@ $dropdown-header-font-size:     .875rem !default;
 $dropdown-header-font-weight:   $font-weight-normal !default;
 $dropdown-header-color:         $uibase-400 !default;
 
+$dropdown-text-color:           $uibase-900 !default;
+
 $dropdown-caret-width:          .4375rem !default;
 $dropdown-caret-color:          $uibase-400 !default;
 $dropdown-caret-active-color:   $active-color !default;
