--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -6,7 +6,7 @@
     <button class="navbar-toggle flex-first mr-0_5" type="button" data-cfw="collapse" data-cfw-collapse-target="#cf-topnav" aria-label="Toggle navigation">
         <span class="cf-header-menu" aria-hidden="true">&#8801;</span>
     </button>
-    <div class="navbar-collapse collapse flex-fill flex-last flex-lg-unordered" id="cf-topnav">
+    <div class="navbar-collapse collapse flex-last flex-lg-unordered" id="cf-topnav">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a href="{{ site.baseurl }}/get-started/quick-start/" class="nav-link {% if page.group == "get-started" %}active{% endif %}">Get Started{% if page.group == "get-started" %} <span class="sr-only">(current section)</span>{% endif %}</a>
