--- a/docs/assets/scss/_search.scss
+++ b/docs/assets/scss/_search.scss
@@ -12,7 +12,7 @@
     margin-left: .5rem;
     clear: both;
 
-    @media (min-width: 62rem) and (max-width: 66em) {
+    @media (max-width: 66em) {
         width: 7.5rem;
     }
 
