--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -145,19 +145,25 @@
 // Card deck
 // 1. Individual cards have margin-bottom by default.
 //    Replace with single margin on the deck.
-.card-deck {
+%card-deck-base {
     display: flex;
     flex-direction: column;
 }
 
-@include media-breakpoint-up(#{$card-deck-breakpoint}) {
-    .card-deck {
-        flex-flow: row wrap;
-        margin-bottom: $card-spacer-y; // 1
+@each $breakpoint in map-keys($grid-breakpoints) {
+    $bprule: breakpoint-designator($breakpoint);
 
-        .card {
-            flex: 1 0 0%;
-            margin-bottom: 0; // 1
+    .card-deck#{$bprule} {
+        @extend %card-deck-base;
+
+        @include media-breakpoint-up(#{$breakpoint}) {
+            flex-flow: row wrap;
+            margin-bottom: $card-spacer-y; // 1
+
+            .card {
+                flex: 1 0 0%;
+                margin-bottom: 0; // 1
+            }
         }
     }
 }
@@ -166,7 +172,7 @@
 @each $breakpoint, $gutter in $card-deck-gutter-widths {
     @include check-gutter-change($breakpoint, $card-deck-gutter-widths) {
         @include media-breakpoint-up($breakpoint) {
-            .card-deck {
+            %card-deck-gutter {
                 margin-right: -($gutter / 2);
                 margin-left: -($gutter / 2);
 
@@ -176,6 +182,13 @@
                 }
             }
         }
+
+        @each $bp-inner in map-keys($grid-breakpoints) {
+            $bprule-inner: breakpoint-designator($bp-inner);
+            .card-deck#{$bprule-inner} {
+                @extend %card-deck-gutter;
+            }
+        }
     }
 }
 
@@ -183,53 +196,59 @@
 // Card group
 // 1. Individual cards have margin-bottom by default,
 //    Replace with single margin on the group.
-.card-group {
+%card-group-base {
     display: flex;
     flex-direction: column;
 }
 
-@include media-breakpoint-up(#{$card-group-breakpoint}) {
-    .card-group {
-        flex-flow: row wrap;
-        margin-bottom: $card-spacer-y; // 1
+@each $breakpoint in map-keys($grid-breakpoints) {
+    $bprule: breakpoint-designator($breakpoint);
 
-        .card {
-            flex: 1 0 0%;
-            margin-bottom: 0; // 1
+    .card-group#{$bprule} {
+        @extend %card-group-base;
 
-            + .card {
-                margin-left: 0;
-                border-left: 0;
-            }
+        @include media-breakpoint-up(#{$breakpoint}) {
+            flex-flow: row wrap;
+            margin-bottom: $card-spacer-y; // 1
 
-            // Handle rounded corners
-            @if $enable-rounded {
-                &:first-child {
-                    @include border-right-radius(0);
+            .card {
+                flex: 1 0 0%;
+                margin-bottom: 0; // 1
 
-                    .card-img-top {
-                        border-top-right-radius: 0;
-                    }
-                    .card-img-bottom {
-                        border-bottom-right-radius: 0;
-                    }
+                + .card {
+                    margin-left: 0;
+                    border-left: 0;
                 }
-                &:last-child {
-                    @include border-left-radius(0);
 
-                    .card-img-top {
-                        border-top-left-radius: 0;
-                    }
-                    .card-img-bottom {
-                        border-bottom-left-radius: 0;
-                    }
-                }
-                &:not(:first-child):not(:last-child) {
-                    border-radius: 0;
+                // Handle rounded corners
+                @if $enable-rounded {
+                    &:first-child {
+                        @include border-right-radius(0);
 
-                    .card-img-top,
-                    .card-img-bottom {
+                        .card-img-top {
+                            border-top-right-radius: 0;
+                        }
+                        .card-img-bottom {
+                            border-bottom-right-radius: 0;
+                        }
+                    }
+                    &:last-child {
+                        @include border-left-radius(0);
+
+                        .card-img-top {
+                            border-top-left-radius: 0;
+                        }
+                        .card-img-bottom {
+                            border-bottom-left-radius: 0;
+                        }
+                    }
+                    &:not(:first-child):not(:last-child) {
                         border-radius: 0;
+
+                        .card-img-top,
+                        .card-img-bottom {
+                            border-radius: 0;
+                        }
                     }
                 }
             }
@@ -241,16 +260,19 @@
 // Card columns
 // If using `display: block;` on child cards - encounter problem with bottom margin being applied in the next column sometimes
 // https://bugs.chromium.org/p/chromium/issues/detail?id=440362
+@each $breakpoint in map-keys($grid-breakpoints) {
+    $bprule: breakpoint-designator($breakpoint);
 
-@include media-breakpoint-up(#{$card-columns-breakpoint}) {
-    .card-columns {
-        column-count: $card-columns-count;
-        column-gap: $card-columns-column-gap;
+    @include media-breakpoint-up(#{$breakpoint}) {
+        .card-columns#{$bprule} {
+            column-count: $card-columns-count;
+            column-gap: $card-columns-column-gap;
 
-        .card {
-            display: inline-table;
-            width: 100%; // Don't let them exceed the column width
-            break-inside: avoid;
+            .card {
+                display: inline-table;
+                width: 100%; // Don't let them exceed the column width
+                break-inside: avoid;
+            }
         }
     }
 }
