Remove outdated IE10 for Window Phone 8 workaround

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -62,8 +62,7 @@
   <script src="{{ site.baseurl }}/assets/js/src/docs.js"></script>
 {% endif %}
 
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
+<!-- IE emulation mode warning -->
 <script src="{{ site.baseurl }}/assets/js/ie-emulation-modes-warning.js"></script>
 
 <script>
