--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -6,41 +6,48 @@
 
     @include media-breakpoint-up($breakpoint) {
         @each $prop, $abbrev in (margin: m, padding: p) {
-            @each $size, $lengths in $spacers {
-                $length-x:   map-get($lengths, x);
-                $length-y:   map-get($lengths, y);
-
-                .#{$abbrev}#{$bprule}-#{$size} { #{$prop}:         $length-y $length-x !important; } // All sides
-                .#{$abbrev}t#{$bprule}-#{$size} { #{$prop}-top:    $length-y !important; }
-                .#{$abbrev}r#{$bprule}-#{$size} { #{$prop}-right:  $length-x !important; }
-                .#{$abbrev}b#{$bprule}-#{$size} { #{$prop}-bottom: $length-y !important; }
-                .#{$abbrev}l#{$bprule}-#{$size} { #{$prop}-left:   $length-x !important; }
-
-                // Axes
-                .#{$abbrev}x#{$bprule}-#{$size} {
-                    #{$prop}-right:  $length-x !important;
-                    #{$prop}-left:   $length-x !important;
+            @each $size, $length in $spacers {
+                .#{$abbrev}#{$bprule}-#{$size} {
+                    #{$prop}: $length !important;
                 }
+                .#{$abbrev}t#{$bprule}-#{$size},
                 .#{$abbrev}y#{$bprule}-#{$size} {
-                    #{$prop}-top:    $length-y !important;
-                    #{$prop}-bottom: $length-y !important;
+                    #{$prop}-top: $length !important;
+                }
+                .#{$abbrev}r#{$bprule}-#{$size},
+                .#{$abbrev}x#{$bprule}-#{$size} {
+                    #{$prop}-right: $length !important;
+                }
+                .#{$abbrev}b#{$bprule}-#{$size},
+                .#{$abbrev}y#{$bprule}-#{$size} {
+                    #{$prop}-bottom: $length !important;
+                }
+                .#{$abbrev}l#{$bprule}-#{$size},
+                .#{$abbrev}x#{$bprule}-#{$size} {
+                    #{$prop}-left: $length !important;
                 }
             }
         }
 
         // Auto margin
-        .m#{$bprule}-auto { margin:        auto !important; }
-        .mt#{$bprule}-auto { margin-top:    auto !important; }
-        .mr#{$bprule}-auto { margin-right:  auto !important; }
-        .mb#{$bprule}-auto { margin-bottom: auto !important; }
-        .ml#{$bprule}-auto { margin-left:   auto !important; }
+        .m#{$bprule}-auto {
+            margin: auto !important;
+        }
+        .mt#{$bprule}-auto,
+        .my#{$bprule}-auto {
+            margin-top: auto !important;
+        }
+        .mr#{$bprule}-auto,
         .mx#{$bprule}-auto {
             margin-right: auto !important;
-            margin-left:  auto !important;
         }
+        .mb#{$bprule}-auto,
         .my#{$bprule}-auto {
-            margin-top:    auto !important;
             margin-bottom: auto !important;
+        }
+        .ml#{$bprule}-auto,
+        .mx#{$bprule}-auto {
+            margin-left: auto !important;
         }
     }
 }
