Add `.font-weight-light` utility

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -222,6 +222,7 @@ $font-family-base:          $font-family-sans-serif !default;
 $font-size-base:    1rem !default;
 $line-height-base:  1.5 !default;
 
+$font-weight-light:     300 !default;
 $font-weight-normal:    normal !default;
 $font-weight-bold:      bold !default;
 $font-weight-base:      $font-weight-normal !default;
