--- a/scss/utilities/_text.scss
+++ b/scss/utilities/_text.scss
@@ -32,9 +32,10 @@
 }
 
 // Weight and italics
-.font-weight-normal  { font-weight: $font-weight-normal; }
-.font-weight-bold    { font-weight: $font-weight-bold; }
-.font-italic         { font-style: italic; }
+.font-weight-light  { font-weight: $font-weight-light !important; }
+.font-weight-normal { font-weight: $font-weight-normal !important; }
+.font-weight-bold   { font-weight: $font-weight-bold !important; }
+.font-italic        { font-style: italic !important; }
 
 // Contextual colors
 @each $theme, $colors in $context-themes {
