Add paragraph spacing setting variable

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -207,6 +207,10 @@ $link-decoration:       underline !default;
 $link-hover-color:      palette-context("primary", 850) !default;
 $link-hover-decoration: underline !default;
 
+// Paragraph
+// =====
+$paragraph-spacer-y:    1rem;
+
 // Cursors
 // =====
 $cursor-disabled:                not-allowed !default;
