Add input group addon color setting variable

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -485,6 +485,7 @@ $form-check-disabled-color:     $disabled-color !default;
 
 $form-group-margin-bottom:      1rem !default;
 
+$input-group-addon-color:        $input-color !default;
 $input-group-addon-bg:           $uibase-50 !default;
 $input-group-addon-border-color: $input-border-color !default;
 
