--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -49,7 +49,7 @@
     font-size: $font-size-base;
     font-weight: $font-weight-normal;
     line-height: $input-line-height;
-    color: $input-color;
+    color: $input-group-addon-color;
     text-align: center;
     background-color: $input-group-addon-bg;
     background-clip: padding-box;
