Add missing !default  to paragraph setting

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -209,7 +209,7 @@ $link-hover-decoration: underline !default;
 
 // Paragraph
 // =====
-$paragraph-spacer-y:    1rem;
+$paragraph-spacer-y:    1rem !default;
 
 // Cursors
 // =====
