Add border addition util

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -198,6 +198,7 @@ $faded-hover-bg: $uibase-100 !default;
 
 // Border dimension in pixels to get proper visual layout
 $border-width: 1px !default;
+$border-color: $uibase-300 !default;
 
 // Links
 // =====
