--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -223,7 +223,7 @@
                 // Handle rounded corners
                 @if $enable-rounded {
                     &:first-child {
-                        @include border-right-radius(0);
+                        @include border-end-radius(0);
 
                         .card-img-top {
                             border-top-right-radius: 0;
@@ -233,7 +233,7 @@
                         }
                     }
                     &:last-child {
-                        @include border-left-radius(0);
+                        @include border-start-radius(0);
 
                         .card-img-top {
                             border-top-left-radius: 0;
