--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -159,7 +159,7 @@
 .input-group-btn:not(:last-child) > .dropdown-toggle,
 .input-group-btn:not(:first-child) > .btn:not(:last-child):not(.dropdown-toggle),
 .input-group-btn:not(:first-child) > .btn-group:not(:last-child) > .btn {
-    @include border-right-radius(0);
+    @include border-end-radius(0);
 }
 .input-group-addon:not(:last-child) {
     border-right: 0;
@@ -171,7 +171,7 @@
 .input-group-btn:not(:first-child) > .dropdown-toggle,
 .input-group-btn:not(:last-child) > .btn:not(:first-child),
 .input-group-btn:not(:last-child) > .btn-group:not(:first-child) > .btn {
-    @include border-left-radius(0);
+    @include border-start-radius(0);
 }
 .form-control + .input-group-addon:not(:first-child) {
     border-left: 0;
