--- a/scss/component/_pagination.scss
+++ b/scss/component/_pagination.scss
@@ -9,12 +9,12 @@
     &:first-child {
         .page-link {
             margin-left: 0;
-            @include border-left-radius($pagination-border-radius);
+            @include border-start-radius($pagination-border-radius);
         }
     }
     &:last-child {
         .page-link {
-            @include border-right-radius($pagination-border-radius);
+            @include border-end-radius($pagination-border-radius);
         }
     }
 }
