--- a/scss/mixins/_pagination.scss
+++ b/scss/mixins/_pagination.scss
@@ -8,12 +8,12 @@
     .page-item {
         &:first-child {
             .page-link {
-                @include border-left-radius($border-radius);
+                @include border-start-radius($border-radius);
             }
         }
         &:last-child {
             .page-link {
-                @include border-right-radius($border-radius);
+                @include border-end-radius($border-radius);
             }
         }
     }
