--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -29,9 +29,9 @@
 // Border removal
 .border-0 { border: 0 !important; }
 .border-t-0 { border-top: 0 !important; }
-.border-r-0 { border-right: 0 !important; }
+.border-e-0 { border-right: 0 !important; }
 .border-b-0 { border-bottom: 0 !important; }
-.border-l-0 { border-left: 0 !important; }
+.border-s-0 { border-left: 0 !important; }
 
 
 // Border colors
