Update spacing utils to be rtl friendly

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -22,7 +22,7 @@
 
         <p class="font-weight-bold mb-0_25">Funding generously provided by:</p>
         <div class="media footer-partners">
-            <div class="d-flex mr-0_5">
+            <div class="d-flex me-0_5">
                 <img src="{{ site.baseurl }}/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
