--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -3,7 +3,7 @@
         <img src="{{ site.baseurl }}/assets/brand/figuration-outline.svg" class="navbar-brand-logo" alt="" />
         <span class="sr-only-xs-down">CAST Figuration</span>
     </a>
-    <button class="navbar-toggle flex-first mr-0_5" type="button" data-cfw="collapse" data-cfw-collapse-target="#cf-topnav" aria-label="Toggle navigation">
+    <button class="navbar-toggle flex-first me-0_5" type="button" data-cfw="collapse" data-cfw-collapse-target="#cf-topnav" aria-label="Toggle navigation">
         <span class="cf-header-menu" aria-hidden="true">&#8801;</span>
     </button>
     <div class="navbar-collapse collapse flex-last flex-lg-unordered flex-lg-shrink text-nowrap" id="cf-topnav">
@@ -29,7 +29,7 @@
         </ul>
     </div>
 
-    <ul class="navbar-nav ml-auto cf-header-social">
+    <ul class="navbar-nav ms-auto cf-header-social">
         <li class="nav-item">
             <a href="{{ site.twitter }}" class="nav-link" aria-label="Twitter" title="Twitter">
                 {% include icons/twitter.svg class="cf-header-icon" %}
